예약 완료 페이지 작성

--- a/이윤창/이윤창.html
+++ b/이윤창/이윤창.html
@@ -7,27 +7,30 @@
 </head>
 <body>
   <h1> 예약이 완료 되었습니다 </h1>
-  <form>
-    <fieldset>
+
+  <!-- <form>
+    <fieldset style="width: 50%;">
       <legend>선택한 숙박 정보</legend>
     </fieldset>
   </form>
 
   <form>
-    <fieldset>
+    <fieldset style="width: 50%;">
       <legend>예약자 정보</legend>
     </fieldset>
   </form>
 
   <form>
-    <fieldset>
+    <fieldset style="width: 50%;">
       <legend>결제 정보</legend>
     </fieldset>
-  </form>
+  </form> -->
 
-  <div>  
+  <div>
+  <form action="../index.html">
     <input type="submit" value="홈으로">
-  </div >
+  </form>  
+  </div>
 
   
 
