--- a/김다현/김다현.html
+++ b/김다현/김다현.html
@@ -7,8 +7,9 @@
 </head>
 <body>
   <form action="../우경서/우경서.html">
+    <h1>예약자 정보 입력</h1>
   <fieldset>
-    <legend><b>예약자 정보 입력</b></legend>
+    <legend><b>예약자 정보</b></legend>
     <label for ="name"><b>예약자명 : </b></label><input type="text" id="name" autofocus required></div>
     <div><label for = "tel"><b>연락처 : </b></label><input type="tel" id="tel" required placeholder="'-'를 제외하고 입력해주세요.'"></div>
     <div><label for = "email"><b>이메일 : </b></label><input type="text" id="email" required>@
@@ -32,7 +33,7 @@
     <input type ="button" value="이전 페이지로" onclick ="location.href='../이준오/이준오.html'">
     <input type="submit" value="다음 페이지로" ></div>
   <br>
-  <div><a href="https://yun9699.github.io/1212/index.html">홈 화면으로 돌아가기</a></div>
+  <div><a href="https://yun9699.github.io/1212/index.html">취소(홈 화면으로 돌아가기)</a></div>
 </form>
 </body>
 </html>
