페이지 이동

--- a/우경서/우경서.html
+++ b/우경서/우경서.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>결제 정보 입력</h1>
-  <form action="">
+  <form action="../이윤창/이윤창.html">
     <fieldset>
       <legend>결제 수단 선택</legend>
       <div>
