--- a/이준오/이준오.html
+++ b/이준오/이준오.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>일석이조 - 숙소 예약</title>
+  <title>숙소 예약</title>
 </head>
 <body>
     <!-- header -->
