--- a/김다현/김다현.html
+++ b/김다현/김다현.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>예약자 정보 입력</title>
+
+  
 </head>
 <body>
-  <form action="../우경서/우경서.html">
+  <form action="../우경서/우경서.html" autocomplete="off">
     <h1>예약자 정보 입력</h1>
   <fieldset>
     <legend><b>예약자 정보</b></legend>
@@ -33,7 +35,7 @@
     <input type ="button" value="이전 페이지로" onclick ="location.href='../이준오/이준오.html'">
     <input type="submit" value="다음 페이지로" ></div>
   <br>
-  <div><a href="https://yun9699.github.io/1212/index.html">취소(홈 화면으로 돌아가기)</a></div>
+  <div><input type ="button" value="취소하기" onclick ="location.href='https://yun9699.github.io/1212/index.html'"></div>
 </form>
 </body>
 </html>
