취소 페이지 이동

--- a/우경서/우경서.html
+++ b/우경서/우경서.html
@@ -30,7 +30,7 @@
     </fieldset>
       <div>
         <button type="submit">주문하기</button>
-        <button type="reset">취소하기</button>
+        <button type="reset" onclick="location.href='../index.html'">취소하기</button>
       </div>
   </form>
 </body>
