--- a/김다현/김다현.html
+++ b/김다현/김다현.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>예약자 정보 입력</title>
-
+예약 단계
+<div>1. <a href="../page/html/">숙박 예약</a> ->
+  2. <a href="../page/html/">예약자 정보 입력</a> ->
+  3. <a href="../page/html/">결제 정보 입력</a> ->
+  4. <a href="../page/html/">결제 완료</a>
+</div>
   
 </head>
 <body>
