--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   </style>
 </head>
 <body>
+  <header>
+    <div><iframe src="./menu/menu_top.html" frameborder="0" width="100%" height="50px" name="menu-top"></iframe></div>
+  </header>
   <div id="container ">
     <h1>숙소를 선택하세요</h1>
   </div>
