--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   <div id="container ">
     <h1>숙소를 선택하세요</h1>
   </div>
-  <img src="./image/hotel01.jpg" alt="" width="800" height="500">
+  <img src="./image/index_hotel_01.jpg" alt="" width="800" height="500">
 </body>
 </html>
