--- a/menu/menu_top.html
+++ b/menu/menu_top.html
@@ -9,6 +9,7 @@
   <a href="../index.html" target="main">Home</a>
   <a href="../page/booking.html" target="main">숙소 정보</a>
   <a href="../page/reservationinfo.html" target="main">예약 정보</a>
+  <a href="../page/bill.html" target="main">결제 정보</a>
   <a href="../page/reserved.html" target="main">예약 완료</a>
 </body>
 </html>
