--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <h1>숙소를 선택하세요</h1>
   </div>
   <img src="./image/index_hotel_01.jpg" alt="" width="800" height="500">
-  <div><input type ="button" value="예약하기" onclick ="location.href='../page/booking.html'"></div>
+  <div><input type ="button" value="예약하기" onclick ="location.href='./page/booking.html'"></div>
 </body>
 </html>
